force-app/main/default/objects/Academy_Enrollment__c/Academy_Enrollment__c.object-meta.xml
<CustomObject>
    <description>Prospective and confirmed learner enrollments for DUNEX Academy courses.</description>
    <label>Academy Enrollment</label>
    <nameField>
        <displayFormat>AE-{0000}</displayFormat>
        <label>Academy Enrollment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Academy Enrollments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>