force-app/main/default/objects/Academy_Enrollment__c/fields/Academy_Course__c.field-meta.xml
<CustomField>
    <fullName>Academy_Course__c</fullName>
    <label>Academy Course</label>
    <referenceTo>Academy_Course__c</referenceTo>
    <relationshipLabel>Academy Enrollments</relationshipLabel>
    <relationshipName>AcademyEnrollments</relationshipName>
    <type>Lookup</type>
</CustomField>