force-app/main/default/objects/Academy_Enrollment__c/fields/Cohort_Date__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Date__c</fullName>
    <label>Cohort Date</label>
    <type>Date</type>
</CustomField>