force-app/main/default/objects/Academy_Enrollment__c/fields/Learner_Email__c.field-meta.xml
<CustomField>
    <fullName>Learner_Email__c</fullName>
    <label>Learner Email</label>
    <type>Email</type>
</CustomField>